fix long url overflow

--- a/assets/ding.scss
+++ b/assets/ding.scss
@@ -210,6 +210,13 @@ nav[data-toggle="toc"] .nav .active .nav {
   margin-bottom: 1rem;
 }
 
+// long url overflow
+
+html {
+  word-wrap: break-word;
+  word-break: break-word
+}
+
 h1, .h1 {
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
